Day-2/PROJECT-vpc-with-ec2/main.tf
```hcl
resource "aws_vpc" "myvpc" {
	cidr_block = var.cidr
}

resource "aws_subnet" "sub1" {
	vpc_id = aws_vpc.myvpc.id
	cidr_block = "10.0.0.0/24"
	availability_zone = "us-east-1a"
	map_public_ip_on_launch = true
}

resource "aws_subnet" "sub2" {
	vpc_id = aws_vpc.myvpc.id
	cidr_block = "10.0.1.0/24"
	availability_zone = "us-east-1b"
	map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "igw" {
	vpc_id = aws_vpc.myvpc.id
}

resource "aws_route_table" "RT" {
	vpc_id = aws_vpc.myvpc.id

	route {
	 cidr_block = "0.0.0.0/0"
	gateway_id = aws_internet_gateway.igw.id
 }
}

resource "aws_route_table_association" "rta1" {
	subnet_id = aws_subnet.sub1.id
	route_table_id = aws_route_table.RT.id
}

resource "aws_route_table_association" "rta2" {
	subnet_id = aws_subnet.sub2.id
	route_table_id = aws_route_table.RT.id
}

resource "aws_security_group" "webSg" {
	name = "web"
	vpc_id = aws_vpc.myvpc.id
	
	ingress {
	 descriprion = "http from vpc"
	 from_port = 80
	 to_port = 80
	 protocol = "tcp"
	 cidr_block = ["0.0.0.0/0"]
}

	ingress {
	 desciption = "SSH"
	 from_port = 22
	 to_port = 22
	 protocol = "tcp"
	 cidr_block = ["0.0.0.0/0"]
}

	egrees {
	 from_port = 0
	 to_port = 0
	 protocol = "-1"
	 cidr_block = ["0.0.0.0/0"]


	tags {
	 Name = "Web-sg"
 }
}

resource "aws_instance" "webserver1" {
	ami = "ami-0261755bbcb8c4a84"
	instance_type = "t2.micro"
	vpc_security_groups_ids = [aws_security_group.webSg.id]
	subnet_id = aws_subnet.sub1.id
	userdata = base64encode(file("userdata.sh"))
}

resource "aws_instance" "webserver2" {
	ami = "ami-0261755bbcb8c4a84"
	instnace_type = "t2.micro"
	vpc_security_groups_ids = [aws_security_groups.webSg.id]
	subnet_id = aws_subnet.sub2.id
	userdata = base64encode(file("userdata1.sh"))
}

# Create a Load Balancer 

resource "aws_lb" "myalb" {
	name = "myalb"
	internal = false
	load_balancer_type = "appliaction"
	

	security_groups = [aws_security_group.webSg.id]
	subnets = [aws_subnet.sub1.id, aws_subnet.sub2.id]
	
	tags {
	 Name = "web"
 }
}

resource "aws_lb_target_group" "tg" {
	name = "myTg"
	port = 80
	protocol = "HTTP"
	vpc_id = aws_vpc.myvpc.id

	health_check {
	 path = "/"
	 port = "traffic-port"
 }
}

resource "aws_lb_target_group_attachment" "attach1" {
	target_group_arn = aws_lb_target_group.tg.arn
	target_id = aws_instance.webserver1.id
	port = 80
}

resource "aws_lb_target_group_attachment" "attch2" {
	target_group_arn = aws_lb_target_group.tg.arn
	target_id = aws_instance.webserver2.id
	port = 80
}

resource "aws_lb_listener" "listener" {
	load_balancer_arn = aws_lb.myalb.arn
	port = 80
	type = "forward"

	default_action {
	 target_group_arn = aws_lb_target_group.tg.arn
	 type = "forward"
 }
}

output "loadbalancerdns" {
	value = aws_lb.myalb.dns_name
```
